Fix for "radio buttons" and dark mode.

--- a/src/css/main.sass
+++ b/src/css/main.sass
@@ -358,6 +358,8 @@ footer.page-footer
 	footer.page-footer p,
 	.timeline-description,
 	.timeline-filter,
+	.timeline-filter .grouping,
+	.timeline-filter .grouping a,
 	.timeline-icon i,
 	.attribution,
 	.etc
